--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -15,12 +15,10 @@
         &:hover .title{
             transform: translateY(0);
         }
-
     .imgP{
         text-align: center;
         width: 100%;
         height: 350px;
-        
         img{
             width: 300px;
             height: 350px;
@@ -45,7 +43,6 @@
             font-weight: 700;
             padding: 1rem 1.5rem;
         }
-
     .title{
         position: absolute;
         bottom: 0;
@@ -53,6 +50,7 @@
         overflow: auto;
         text-align: left;
         width: 100%;
+        border-radius: 1rem;
         transform: translateX(100%);
         transition: transform .7s ease-in-out;
         z-index: 3;
